--- a/my_ride/templates/ride_list.html
+++ b/my_ride/templates/ride_list.html
@@ -3,18 +3,30 @@
 {% block title %} Все заказы {% endblock %}
 
 {% block content %}
-
 <div class="row">
-    {% for obj in rides %}
-    <div class="col-md-8 mx-auto mb-3">
-        <h4>Заказ {{ obj.number }}:</h4>
-        Сумма: {{ obj.price}}<br>
-        Водитель: {{ obj.driver }}<br>
-        Автомобиль: {{ obj.car }}<br>
-        <hr>
-    </div>
+    <div class="col-md-10 mx-auto mb-3">
+        <h3>Смена: дата</h3>
+        <table class="table">
+            <tr>
+                <th>Заказ: </th>
+                <th>Сумма: </th>
+                <th>Водитель: </th>
+                <th>Автомобиль: </th>
+                <th>Наличные: </th>
+            </tr>
 
-    {% endfor %}}
+            {% for obj in rides %}
+
+            <tr >
+                <td>{{ obj.number }}:</td>
+                <td>{{ obj.price }}</td>
+                <td>{{ obj.driver }}</td>
+                <td>{{ obj.car }}</td>
+                <td>{{ obj.cash }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
     <div class="col-md-8 mx-auto">
         <a href="{% url 'new_ride'%}">Добавить еще заказ</a>
     </div>
