--- a/my_ride/templates/ride_detail.html
+++ b/my_ride/templates/ride_detail.html
@@ -14,9 +14,9 @@
         <hr>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'ride_change' ride.number %}">Корректировка заказа</a><br>
-        <a href="{% url 'new_ride' %}">Добавить еще заказ</a><br>
-        <a href="{% url 'rides_all' %}">Посмотреть все заказы</a><br>
+        <a href="{% url 'ride_change' ride.number %}" role="button" class="btn btn-info">Корректировка заказа</a>
+        <a href="{% url 'new_ride' %}" role="button" class="btn btn-info">Добавить еще заказ</a>
+        <a href="{% url 'rides_all' %}" role="button" class="btn btn-info">Посмотреть все заказы</a>
     </div>
 </div>
 
