--- a/my_ride/templates/ride_done.html
+++ b/my_ride/templates/ride_done.html
@@ -12,8 +12,8 @@
         Автомобиль: {{ ride.car }}<br>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride'%}">Добавить еще заказ</a><br>
-        <a href="{% url 'rides_all'%}">Посмотреть все заказы</a><br>
+        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
+        <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
     </div>
 </div>
 
