--- a/my_ride/templates/ride_list.html
+++ b/my_ride/templates/ride_list.html
@@ -5,29 +5,36 @@
 {% block content %}
 <div class="row">
     <div class="col-md-10 mx-auto mb-3">
-        <h3>Смена: дата</h3>
+        <h3>Смена: ДАТА</h3>
         <table class="table">
             <tr>
                 <th>Заказ: </th>
                 <th>Сумма: </th>
+                <th>Наличные: </th>
                 <th>Водитель: </th>
                 <th>Автомобиль: </th>
-                <th>Наличные: </th>
+                <th>Покупка смены: </th>
+                <th>ЗСД: </th>
+                <th>Доп.комиссия: </th>
+                <th>Коммент: </th>
             </tr>
             {% for obj in rides %}
             <tr >
                 <td><a href="{% url 'ride_detail' obj.number%}">{{ obj.number }}</a></td>
                 <td>{{ obj.price }}</td>
-                <td>{{ obj.driver }}</td>
-                <td>{{ obj.car }}</td>
                 <td>{{ obj.cash }}</td>
+                <td><a href="{% url 'total_week_driver' obj.driver%}">{{ obj.driver }}</a></td>
+                <td><a href="{% url 'total_day_car' obj.car%}">{{ obj.car }}</td>
+                <td>{{ obj.save_tax }}</td>
+                <td>{{ obj.toll }}</td>
+                <td>{{ obj.extra_tax }}</td>
+                <td>{{ obj.comment }}</td>
             </tr>
             {% endfor %}
         </table>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride'%}">Добавить еще заказ</a><br>
-        <a href="{% url 'total_day_car'%}">Итого за смену</a><br>
+        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
     </div>
 </div>
 
