--- a/my_ride/templates/ride_detail.html
+++ b/my_ride/templates/ride_detail.html
@@ -6,11 +6,13 @@
 
 <div class="row">
     <div class="col-md-8 mx-auto">
-        <h3>Детали заказа {{ ride }}:</h3>
+        <h3>Детали заказа {{ ride.number }}:</h3>
         <hr>
         Сумма: {{ ride.price }}<br>
         Водитель: {{ ride.driver }}<br>
         Автомобиль: {{ ride.car }}<br>
+        Наличные: {{ ride.cash }}<br>
+        Коммент: {{ ride.comment }}<br>
         <hr>
     </div>
     <div class="col-md-8 mx-auto">
