--- a/my_ride/templates/ride_done.html
+++ b/my_ride/templates/ride_done.html
@@ -10,6 +10,7 @@
         Сумма: {{ ride.price }}<br>
         Водитель: {{ ride.driver }}<br>
         Автомобиль: {{ ride.car }}<br>
+        Наличные: {{ ride.cash }}<br>
     </div>
     <div class="col-md-8 mx-auto">
         <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
