some template edits

--- a/my_ride/templates/total/totalcar.html
+++ b/my_ride/templates/total/totalcar.html
@@ -25,7 +25,7 @@
             </tr>
             {% for obj in result %}
             <tr >
-                <td>{{ obj.number }}:</td>
+                <td>{{ obj.number }}</td>
                 <td>{{ obj.price }}</td>
                 <td>{{ obj.driver }}</td>
                 <td>{{ obj.car }}</td>
