--- a/my_ride/templates/total/totaldriver.html
+++ b/my_ride/templates/total/totaldriver.html
@@ -26,8 +26,8 @@
             </tr>
             {% for obj in result %}
             <tr >
-                <td>{{ obj.shift }}:</td>
-                <td>{{ obj.number }}:</td>
+                <td>{{ obj.shift }}</td>
+                <td>{{ obj.number }}</td>
                 <td>{{ obj.price }}</td>
                 <td>{{ obj.driver }}</td>
                 <td>{{ obj.car }}</td>
