--- a/my_ride/templates/ride_list.html
+++ b/my_ride/templates/ride_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-10 mx-auto mb-3">
-        <h3>Смена: ДАТА</h3>
+        <h3>Все заказы:</h3>
         <table class="table">
             <tr>
                 <th>Заказ: </th>
