gross edits in blogic

--- a/my_ride/templates/total/totaldriver.html
+++ b/my_ride/templates/total/totaldriver.html
@@ -13,6 +13,8 @@
             <button type="submit" class="btn btn-info">Поездки за неделю</button>
         </form>
         <hr>
+        <div>Some Period Driver Balance</div>
+        <hr>
         {% if result %}
         <h3>Водитель всего за неделю</h3>
         <table class="table">
