some changes to form in process

--- a/my_ride/templates/total/totalday_driver.html
+++ b/my_ride/templates/total/totalday_driver.html
@@ -4,8 +4,18 @@
 
 {% block content %}
 <div class="row">
+    <div class="col-md-8 mx-auto mb-5">
+        <h3>Выбрать другой день недели [{{ week }}] для [ {{ name }} ]:</h3>
+        <form method="POST" action="" class="row g-3">
+            <div class="mb-1">
+                {% csrf_token %}
+                {{ form }}
+            </div>
+            <button type="submit" class="btn btn-info col-md-2">Выбрать</button>
+        </form>
+    </div>
     <div class="col-md-10 mx-auto mb-3">
-        <h3>Все заказы:</h3>
+        <h3>Заказы {{ name }} за {{ shift }}:</h3>
         <table class="table">
             <tr>
                 <th>Неделя</th>
@@ -14,9 +24,7 @@
                 <th>Сумма: </th>
                 <th>Наличные: </th>
                 <th>Водитель: </th>
-                <th>Вод.Стат:</th>
                 <th>Автомобиль: </th>
-                <th>A/M Стат:</th>
                 <th>Покупка смены: </th>
                 <th>Доп.комиссия: </th>
                 <th>Режим: </th>
@@ -26,15 +34,13 @@
             </tr>
             {% for obj in rides %}
             <tr >
-                <td>{{ obj.shift.week }}</td>
-                <td>{{ obj.shift }}</td>
+                <td><a href="#" >{{ obj.shift.week }}</a></td>
+                <td><a href="#" >{{ obj.shift }}</a></td>
                 <td><a href="{% url 'ride_detail' obj.number%}">{{ obj.number }}</a></td>
                 <td>{{ obj.price }}</td>
                 <td>{{ obj.cash }}</td>
                 <td>{{ obj.driver }}</td>
-                <td><a href="{% url 'total_day_driver' obj.driver obj.shift %}">День</a>&nbsp|&nbsp<a href="{% url 'total_week_driver' obj.driver obj.shift %}">Нед.</a></td>
                 <td>{{ obj.car }}</td>
-                <td><a href="{% url 'total_day_car' obj.car obj.shift %}">День</a>&nbsp|&nbsp<a href="{% url 'total_week_car' obj.car obj.shift %}">Нед.</a></td>
                 <td>{{ obj.save_tax }}</td>
                 <td>-{{ obj.tax_result }}</td>
                 <td>{{ obj.extra_tax }}</td>
@@ -47,6 +53,7 @@
     </div>
     <div class="col-md-8 mx-auto">
         <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
+        <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
     </div>
 </div>
 
