--- a/my_ride/templates/total/totalday_car.html
+++ b/my_ride/templates/total/totalday_car.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %} Все заказы водителя {% endblock %}
+{% block title %} Все заказы машины {% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-8 mx-auto mb-5">
-        <h3>Выбрать другой день недели [{{ week }}] для [ {{ name }} ]:</h3>
+        <h3>Выбрать другой день недели [{{ week }}] для [ {{ car }} ]:</h3>
         <form method="POST" action="" class="row g-3">
             <div class="mb-1">
                 {% csrf_token %}
@@ -15,7 +15,7 @@
         </form>
     </div>
     <div class="col-md-10 mx-auto mb-3">
-        <h3>Заказы [{{ name }}] за [{{ shift }}]:</h3>
+        <h3>Заказы [{{ car }}] за [{{ shift }}]:</h3>
         <table class="table">
             <tr>
                 <th>Неделя</th>
