--- a/my_ride/templates/total/totalday_car.html
+++ b/my_ride/templates/total/totalday_car.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Все заказы машины {% endblock %}
+{% block title %} Заказы машины за день {% endblock %}
 
 {% block content %}
 <div class="row">
