--- a/my_ride/templates/total/totalday_driver.html
+++ b/my_ride/templates/total/totalday_driver.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Все заказы водителя {% endblock %}
+{% block title %} Заказы водителя за день {% endblock %}
 
 {% block content %}
 <div class="row">
