driver balance per day 1st version added

--- a/my_ride/templates/total/totalday_car.html
+++ b/my_ride/templates/total/totalday_car.html
@@ -52,8 +52,9 @@
         </table>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
+        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
+        <a href="#" role="button" class="btn btn-info">Завершить смену</a>
     </div>
 </div>
 
