--- a/my_ride/templates/total/totalday_driver.html
+++ b/my_ride/templates/total/totalday_driver.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-8 mx-auto mb-5">
+    <div class="col-md-5 mx-auto mb-5">
         <h3>Выбрать другой день недели [{{ week }}] для [ {{ name }} ]:</h3>
         <form method="POST" action="" class="row g-3">
             <div class="mb-1">
@@ -13,6 +13,27 @@
             </div>
             <button type="submit" class="btn btn-info col-md-2">Выбрать</button>
         </form>
+    </div>
+    <div class="col-md-5">
+        <h3>Финансовые показатели за смену:</h3>
+        <table>
+             <tr>
+                <td>Касса</td>
+                <td>{{ report.income }}</td>
+            </tr>
+             <tr>
+                <td>Наличные</td>
+                <td>{{ report.cash }}</td>
+            </tr>
+             <tr>
+                <td>Покуп. смены</td>
+                <td>{{ report.s_tax }}</td>
+            </tr>
+             <tr>
+                <td>Чаевые</td>
+                <td>{{ report.tips }}</td>
+            </tr>
+        </table>
     </div>
     <div class="col-md-10 mx-auto mb-3">
         <h3>Заказы [{{ name }}] за [{{ shift }}]:</h3>
@@ -52,8 +73,9 @@
         </table>
     </div>
     <div class="col-md-8 mx-auto">
-        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить еще заказ</a>
+        <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
         <a href="{% url 'rides_all'%}"role="button" class="btn btn-info" >Посмотреть все заказы</a>
+        <a href="{% url 'new_report' shift %}" role="button" class="btn btn-info">Завершить смену</a>
     </div>
 </div>
 
