delete func added

--- a/my_ride/templates/ride_detail.html
+++ b/my_ride/templates/ride_detail.html
@@ -17,6 +17,7 @@
     </div>
     <div class="col-md-8 mx-auto">
         <a href="{% url 'ride_change' ride.number %}" role="button" class="btn btn-info">Корректировка заказа</a>
+        <a href="{% url 'x_ride' ride.number %}" role="button" class="btn btn-info">Удалить заказ</a>
         <a href="{% url 'new_ride' %}" role="button" class="btn btn-info">Добавить еще заказ</a>
         <a href="{% url 'rides_all' %}" role="button" class="btn btn-info">Посмотреть все заказы</a>
     </div>
