--- a/my_ride/templates/ride_list.html
+++ b/my_ride/templates/ride_list.html
@@ -47,7 +47,7 @@
     </div>
     <div class="col-md-8 mx-auto">
         <a href="{% url 'new_ride'%}" role="button" class="btn btn-info">Добавить заказ</a>
-        <a href="#" role="button" class="btn btn-info">Завершить смену</a>
+        <a href="{% url 'start'%}" role="button" class="btn btn-info">Все недели</a>
     </div>
 </div>
 
