--- a/my_ride/templates/week_page.html
+++ b/my_ride/templates/week_page.html
@@ -6,13 +6,56 @@
 <div class="row">
     <div class="col-md-10 mx-auto mb-3">
         <h3>Все отчеты за неделю {{ week }}:</h3>
+        <div class="card col-md-3">
+            <h3 class="card-header">Выбрать водителя:</h3>
+            <div class="card-body">
+                <form method="POST" action="" class="row g-3">
+                    <div class="mb-1">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                    </div>
+                    <button type="submit" class="btn btn-info col-md-5">Выбрать</button>
+                </form>
+            </div>
+        </div>
+        <div class="card col-md-3">
+            <h3 class="card-header">Показатели <span style="color: darkred; text-decoration: underline">{{ name }}</span> за смену <span style="color: darkblue; text-decoration: underline">{{ shift }}</span>:</h3>
+            <div class="card-body">
+                <table>
+                     <tr>
+                        <td>Касса</td>
+                        <td>{{ report.income }}</td>
+                    </tr>
+                     <tr>
+                        <td>Наличные</td>
+                        <td>{{ report.cash }}</td>
+                    </tr>
+                     <tr>
+                        <td>Покуп. смены</td>
+                        <td>{{ report.s_tax }}</td>
+                    </tr>
+                     <tr>
+                        <td>Чаевые</td>
+                        <td>{{ report.tips }}</td>
+                    </tr>
+                    <tr>
+                        <td>ЗСД</td>
+                        <td>{{ report.tolls }}</td>
+                    </tr>
+                    <tr>
+                        <td>км</td>
+                        <td>{{ report.mileage }}</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
         <div>
             {% for key, value in weekly_reports %}
                 {{ key }}
                 <div>
                 {% if value %}
                     {% for i in value %}
-                    <a href="{% url 'total_day_driver' i.driver i.day %}" role="button" class="btn btn-success">{{ i.car }}<br>{{ i.driver }}<br>{{ i.income }}</a>
+                    <a href="{% url 'total_day_driver' i.driver i.day %}" role="button" class="btn btn-success">{{ i.car }}<br>{{ i.driver }}<br> {{ i.income }} - {{ i.hours}} ч.</a>
                     {% endfor %}
                 {% endif %}
                 </div>
