--- a/my_ride/templates/total/totalday_driver.html
+++ b/my_ride/templates/total/totalday_driver.html
@@ -47,6 +47,10 @@
                         <td>Покуп. смены</td>
                         <td>{{ report.s_tax }}</td>
                     </tr>
+                    <tr>
+                        <td>Доп.комиссия</td>
+                        <td>{{ report.x_tax }}</td>
+                    </tr>
                      <tr>
                         <td>Чаевые</td>
                         <td>{{ report.tips }}</td>
